# openplanet-climate

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  PRIVACY.md  README.md  VALIDATION_REPORT.md  build_vault.py  force_vault.py  funding.json  package-lock.json  package.json  patch_vault.py  project_structure.txt  push_code.py  pyproject.toml  requirements.txt  smart_fill_vault.py  start.sh  test_api.py  test_db.py  verify_public_output.py
.github/workflows/: ci.yml
agentverse/: README.md  openplanet_agent.py
backend/climate_engine/: settings.py
climate_engine/: __init__.py  config.py  epidemiology.py  lapse_layer.py  settings.py  version.py
climate_engine/api/: _helpers.py  main.py  physics.py  routes_projection.py  schemas.py  security.py
climate_engine/audit/: __init__.py
docs/: API.md  data_resilience.md  methodology.md
frontend/: eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/public/: robots.txt  (+2 more)
infra/: docker-compose.yml
openplanet_climate.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: build_metro_vault.py  build_socio_vault.py  check_hf_sync.py  deploy_hf.py  enrich_socio_vault_rest.py  prewarm_cache.py
secrets/: gee-service-account.json
tests/: _engine_probe.py  conftest.py  generate_fixtures.py  generate_validation_report.py  reference_cities.json  test_accuracy_guard.py  test_climate_intelligence.py  test_geocoding.py  test_geocoding_ranking.py  test_global_accuracy.py  test_koppen.py  test_pipeline.py  test_resilience.py  test_science_formulas.py
(+116 files in other folders)
