[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openplanet-climate"
version = "1.0.0"
description = "The Linux of Urban Climate: A Global, Dynamic-Resolution Scenario Engine"
requires-python = ">=3.11"
dependencies = [
    # ── Web framework ──────────────────────────────────────────────────────
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",

    # ── Database — async Postgres + PostGIS ────────────────────────────────
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "geoalchemy2>=0.14.0",
    "psycopg[binary]>=3.1.0",

    # ── Settings & validation ──────────────────────────────────────────────
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # ── Science layer ──────────────────────────────────────────────────────
    # pandas + numpy: used by engine_bridge.py, epidemiology.py, lapse_layer.py
    # h3 + h3pandas: used by ingestion pipeline and H3Cell spatial registry
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "h3>=3.7.0",
    "h3pandas>=0.2.0",

    # Removed: duckdb — replaced entirely by Postgres + PostGIS.
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",          # FastAPI test client
    "coverage>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["climate_engine*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths   = ["tests"]